--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "author": "AmzPrep",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
