--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,13 @@
   "dependencies": {
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.13.0",
     "xlsx": "^0.18.5"
   },
