--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "canvas": "^3.2.0",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
