--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "canvas": "^3.2.0",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
